--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
             'com.github.javafaker:javafaker:1.0.2'
 
     )
+
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
 }
 
 test {
