--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,13 @@ dependencies {
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
 }
 
-test {
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
-}
+ }
+
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
