--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
             'com.codeborne:selenide:6.9.0',
             'org.junit.jupiter:junit-jupiter:5.9.0',
             'io.qameta.allure:allure-selenide:2.19.0',
-            'com.github.javafaker:javafaker:1.0.2'
+            'com.github.javafaker:javafaker:1.0.2',
+            'org.slf4j:slf4j-simple:2.0.3'
 
     )
 
@@ -39,7 +40,20 @@ dependencies {
 tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
  }
+
+task properties_test(type: Test) {
+    useJUnitPlatform{
+        includeTags "properties"
+    }
+}
 
 
 tasks.withType(JavaCompile) {
