--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   test:
     # где заускаем
-    runs-on: windows 10
+    runs-on: ubuntu-latest
     # что делаем
     steps:
       # выкачиваем репозиторий
